[package]
authors = ["taroosg <root@taroosg.dev>"]
edition = "2018"
name = "async-await"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.6.1", features = ["attributes"]}
async-trait = "0.1.42"
futures = "0.3.13"
