[package]
authors = ["taroosg <root@taroosg.dev>"]
edition = "2018"
name = "app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 自作クレートの呼び出し
library = {path = "../library", default-features = false, features = ["serde", "special"]}
