[package]
authors = ["taroosg <root@taroosg.dev>"]
edition = "2018"
name = "todo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.1.0"
actix-web = "3.3.2"
askama = "0.10.5"
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
rusqlite = {version = "0.24", features = ["bundled"]}
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0.24"
