[package]
authors = ["taroosg <root@taroosg.dev>"]
edition = "2018"
name = "ui_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.6.1", features = ["unstable"]}
iced = {version = "0.1.1", features = ["async-std"]}
iced_futures = "0.1.2"
iced_native = "0.2.2"
